--- a/css/style.css
+++ b/css/style.css
@@ -27,8 +27,7 @@ h2
 }
 
 p{
-    font-weight: 300;
-    line-height: 2;
+
 }
 
 .profile_pic
@@ -61,6 +60,8 @@ p{
     padding: 3em 1em;
     font-size: 20px;
     text-align: justify;
+    font-weight: 300;
+    line-height: 2;
 }
 
 .about_des
@@ -68,8 +69,16 @@ p{
     text-align: left;
 }
 
+#footer
+{
+    font-size: 16px;
+}
+#footer2
+{
+    font-size: 16px;
+}
 
-#jumbo
+#contact
 {
 
 }
@@ -170,8 +179,17 @@ p{
         margin-top: 8%;
     }
 
-    .col
-    {
+    #footer {
+        font-size: 13px;
+    }
 
+    #footer2
+    {
+        font-size: 13px;
+    }
+
+    #contact
+    {
+        font-size: 13px;
     }
 }
